apps/k8s/knarr/sonarr/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: knarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc  # This connects to your Rclone mount
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: knarr
spec:
  selector:
    app: sonarr
  ports:
  - port: 80
    targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sonarr"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "sonarr.png"
    gethomepage.dev/description: "TV series manager"
spec:
  rules:
  - host: sonarr.yggdrasil.rip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 80
